test/files/res/bug687.check

nsc> 
nsc> bug687/QueryB.scala:3: error: name clash between defined and inherited member:
method equals:(java.lang.Object)scala.Boolean and
method equals:(scala.Any)scala.Boolean in class Any
have same type after erasure: (java.lang.Object)scala.Boolean
  override def equals(o : Object) = false;
           ^

nsc> 
nsc> 